k8s/traefik/alb/lb-middlewares.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: roundrobin-lb
  namespace: flight-search
spec:
  loadBalancer:
    passHostHeader: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sticky-lb
  namespace: flight-search
spec:
  loadBalancer:
    passHostHeader: true
    sticky:
      cookie:
        name: app_session
        secure: true
        httpOnly: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: weighted-lb
  namespace: flight-search
spec:
  loadBalancer:
    passHostHeader: true
