k8s/traefik/alb/random-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: random-balancer
  namespace: flight-search
spec:
  loadBalancer:
    method: random
