k8s/traefik/alb/least-traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: flight-app-service
  namespace: flight-search
spec:
  selector:
    app: flight-app
  ports:
  - port: 80
    targetPort: 4000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: least-host
  namespace: flight-search
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`least.cutemiya.ru`)
    kind: Rule
    services:
    - name: flight-app-service
      port: 80
      strategy: leasttime
  tls:
    certResolver: letsencrypt
