k8s/traefik/alb/random-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: random-host
  namespace: flight-search
spec:
  entryPoints:
    - web
    - websecure  # для HTTPS раскомментировать
  routes:
  - match: Host(`random.cutemiya.ru`)
    kind: Rule
    middlewares:
      - name: random-balancer  # ← применяем middleware
    services:
    - name: flight-app-service  # твой сервис
      port: 80
