k8s/traefik/alb/random-traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: flight-app-service-r
  namespace: flight-search
spec:
  selector:
    app: flight-app
  ports:
  - port: 80
    targetPort: 4000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: random-host
  namespace: flight-search
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`random.cutemiya.ru`)
    kind: Rule
    services:
    - name: flight-app-service-r
      port: 80
      strategy: p2c
  tls:
    certResolver: letsencrypt
