k8s/traefik/alb/rounrobin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-app-roundrobin
  namespace: flight-search
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - roundrobin.cutemiya.ru
    secretName: flight-app-tls
  rules:
  - host: roundrobin.cutemiya.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flight-app-service
            port:
              number: 80
